--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         versionName "1.0"
         resConfigs 'en', 'fr'
 
-        buildConfigField 'String', 'API_EP', "\"http://selfalliance.azurewebsites.net/api/user\""
+        buildConfigField 'String', 'API_EP', "\"http://selfalliance.azurewebsites.net/api/\""
     }
 
     buildTypes {
@@ -40,7 +40,10 @@ dependencies {
     compile "com.android.support:design:$supportLibVersion"
 
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'io.reactivex:rxjava:1.1.1'
     compile 'io.reactivex:rxandroid:1.1.0'
