update travis yaml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+jdk: oraclejdk8
 android:
   components:
     - platform-tools
@@ -7,3 +8,5 @@ android:
     - android-23
     - extra-google-m2repository
     - extra-android-m2repository
+script:
+  - ./gradlew clean assemble
