--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
 script:
-  - ./gradlew clean assemble
+  - ./gradlew clean assembleDebug
